# FuckMouseCursor

./: .gitignore  CMakeLists.txt  README.md
res/: FuckMouseCursor.manifest  resource.rc
src/: main.cpp
